--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -1,3 +1,18 @@
 .nav {
   flex: 0 1 auto;
 }
+
+.navbar-nav>button {
+  background: var(--accent);
+  color: black;
+  border-radius: 3rem;
+  font-weight: bold;
+  border: none;
+  padding: 0.5rem 1rem;
+}
+
+.navbar-brand {
+  padding: 0;
+  font-size: 2rem;
+  font-weight: bold;
+}
