--- a/client/src/components/Circle/circle.css
+++ b/client/src/components/Circle/circle.css
@@ -20,7 +20,7 @@
   min-width: 6rem;
   height: 6rem;
   border-radius: 4rem;
-  border: 0.5rem solid var(--accent);
+  border: 5px solid var(--accent);
 }
 
 .description {
@@ -29,8 +29,14 @@
   text-align: right;
   align-self: center;
   padding-right: 1rem;
+  color: black;
+  text-decoration: none;
 }
 
 .description>:first-child {
   font-size: 1.7rem;
+}
+
+a {
+  text-decoration: none;
 }
