--- a/client/src/components/Grind/grind.css
+++ b/client/src/components/Grind/grind.css
@@ -2,12 +2,12 @@
   display: grid;
   grid-template-columns: 1fr 3fr;
   background-color: #fff;
-  width: auto;
   max-height: 8rem;
   border-radius: 4rem;
   padding: 1em 1.2em;
   margin: 1em;
   color: black;
+  width: 80%;
 }
 
 .grind-card:hover {
@@ -37,4 +37,13 @@
 
 .grind-details>.progress-bar-container {
   padding-top: 1em;
+}
+
+.progress-bar {
+  background-color: #AFD890;
+}
+
+.progress {
+  border-radius: 1rem;
+  height: 0.5rem;
 }
